# kyrgyz-normalizer

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
src/kyrgyz_normalizer/: __init__.py  normalizer.py
tests/: test_data.txt  test_normalizer.py
