[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyrgyz-normalizer"
version = "0.1.0"
description = "Кыргызча текст нормализатор TTS системалары үчүн / Kyrgyz text normalizer for TTS systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "Kyrgyz Normalizer Contributors"}
]
keywords = ["kyrgyz", "normalizer", "tts", "text-to-speech", "nlp", "кыргызча"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Kirghiz",
]

[project.urls]
Homepage = "https://github.com/AlibekovNurtilek/kyrgyz-normalizer"
Issues = "https://github.com/AlibekovNurtilek/kyrgyz-normalizer/issues"

[tool.setuptools.packages.find]
where = ["src"]
