[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyrgyz-normalizer"
version = "0.2.1"
description = "Кыргызча текст нормализатор TTS системасы үчүн / Kyrgyz text normalizer for TTS systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "Kyrgyz Normalizer Contributors"}
]
keywords = ["kyrgyz", "normalizer", "tts", "nlp", "text-processing", "кыргызча"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
kyrgyz-normalizer = "kyrgyz_normalizer.normalizer:main"

[project.urls]
Homepage = "https://github.com/AlibekovNurtilek/kyrgyz-normalizer"
Issues = "https://github.com/AlibekovNurtilek/kyrgyz-normalizer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
